# goalmap-ai

./: .gitignore  README.md  cloudbuild.yaml  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
server/: Dockerfile  README.md  perf_test.py  pyproject.toml  test_latency.py  test_model.py
server/app/: main.py
server/app/api/: dependencies.py  endpoints.py
server/app/core/: config.py  database.py  exceptions.py  graph_manager.py  uow.py
server/app/models/: __init__.py  base.py  blueprint.py  checkin.py  conversation.py  message.py  node.py  roadmap.py
server/app/repositories/: base.py  conversation_repo.py  roadmap_repo.py
server/app/schemas/: api_schemas.py  discovery.py  roadmap.py
server/app/services/: checkin_service.py  discovery_service.py  gemini.py  langfuse.py  roadmap_service.py
server/app/utils/: roadmap.py
server/migrations/: README  env.py
server/migrations/versions/: 26b82ef8f376_add_context_fields_to_blueprint.py  35cca1248f0a_initial_schema_with_node_enum.py  36b7d591f7e4_enforce_1_1_relationship_between_.py  8208bb912058_initial_schema.py  9d8e7f6a5b4c_add_status_enums.py  a1b2c3d4e5f6_add_progress_to_nodes.py  d6e7c0122b5c_initial_schema.py  f3d8acd0bc5c_add_uncertainties_to_blueprint.py
server/scripts/: seed_db.py  sync_prompts.py
server/tests/: conftest.py
server/tests/fixtures/: conversations.py  roadmaps.py  users.py
server/tests/integration/: __init__.py  conftest.py  test_blueprint_roadmap.py  test_discovery_uncertainty.py  test_fixtures.py  test_roadmap_graph.py  (+2 more)
(+66 files in other folders)
